<resources>
    <string name="app_name" translatable="false">frontcafe</string>
    <string name="nav_menu" translatable="false">Меню</string>
    <string name="nav_home" translatable="false">Начало</string>
    <string name="nav_logo" translatable="false"/>
    <string name="nav_disc" translatable="false">Акции</string>
    <string name="nav_ect" translatable="false">Ещё</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AU">\nВсем хорошего чая!\n
    \nОчень рады, что Вы используете наше приложение. \nМаленькая команда разработчиков будет рада каждому отклику.\nОцени нас!</string>
    <string name="thanks">Спасибо!</string>
    <string name="aboutus">AboutUS</string>
    <string name="corzi"/>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Имя пользователя</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Вход</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Добро пожаловать, !"</string>
    <string name="invalid_username">Неправильное имя пользователя</string>
    <string name="invalid_password">Пароль должен быть больше 5 символов</string>
    <string name="login_failed">"Login failed"</string>
    <string name="progr">TODO</string>
    <string name="lone">TODO</string>
    <string name="line">TODO</string>
    <string name="log">TODO</string>
    <string name="click">click</string>
    <string name="promo">Ваш промокод</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>