<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:title="@string/nav_home"
            android:icon="@drawable/home"
            android:iconTint="#3F51B5"
            android:id="@+id/nav_home"/>
    <item
            android:title="@string/nav_menu"
            android:icon="@drawable/menu"
            android:iconTint="#FFEB3B"
            android:id="@+id/nav_menu"/>
    <item
            android:title="@string/nav_logo"
            android:icon="@drawable/logo"
            android:checkable="false"
            android:enabled="false"
            android:id="@+id/nav_logo"/>
    <item
            android:title="@string/nav_disc"
            android:icon="@drawable/disc"
            android:iconTint="#F44336"
            android:id="@+id/nav_disc"/>
    <item
            android:title="@string/nav_ect"
            android:icon="@drawable/ect"
            android:iconTint="#9C27B0"
            android:id="@+id/nav_ect"/>
</menu>